o pai conseguiu porra eu fiz um bloco igual o vidro porra demorou tanto mas agora tudo faz sentido tive um aha moment fudido

--- a/src/main/resources/assets/cyberspacenetrunners/lang/en_us.json
+++ b/src/main/resources/assets/cyberspacenetrunners/lang/en_us.json
@@ -1,7 +1,6 @@
 {
-  "block.cyberspacenetrunners.flowing_data_block": "Flowing Data",
-  "item.cyberspacenetrunners.flowing_data_block": "Flowing Data",
-  "block.cyberspacenetrunners.data_package": "Data Package",
+  "block.cyberspacenetrunners.flowingdata_block": "Flowing Data",
+  "block.cyberspacenetrunners.datapackage_block": "Data Package",
 
 
   "item.cyberspacenetrunners.data_shard": "Data Shard",
